Display duraform door list for order

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-list/duraform-door-list.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-list/duraform-door-list.component.html
@@ -1,27 +1,6 @@
 <div class="duraform-door-list">
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
-  <app-duraform-door></app-duraform-door>
+  <app-duraform-door
+    *ngFor="let door of displayedDoors"
+    [door]="door"
+  ></app-duraform-door>
 </div>
