--- a/JanperCab/5-JanperCab/ClientApp/src/app/pages/duraform-page/duraform-page.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/pages/duraform-page/duraform-page.component.html
@@ -1,5 +1,4 @@
 <div class="duraform-page">
   <app-duraform-process></app-duraform-process>
-  <app-duraform-filter-box></app-duraform-filter-box>
-  <app-duraform-door-list></app-duraform-door-list>
+  <app-duraform-order-step-one></app-duraform-order-step-one>
 </div>
