--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-filter-box/duraform-filter-box.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-filter-box/duraform-filter-box.component.html
@@ -1,50 +1,49 @@
-<div class="filter-box">
+<div [formGroup]="filterFg" class="filter-box">
   <div class="row">
-    <div class="col-1-3">
+    <div class="col-1-4">
       <div class="form__icon-control right filter-box__search">
-        <input type="text" class="form__control" placeholder="Search..." />
-        <i class="fa fa-times"></i>
+        <input
+          type="text"
+          class="form__control"
+          placeholder="Search..."
+          formControlName="search"
+          (keyup)="onSearchKeyUp($event)"
+          (input)="onSearchChange()"
+        />
+        <i
+          class="fa fa-times"
+          *ngIf="filterFg.get('search').value.trim() !== ''"
+        ></i>
       </div>
-      <span class="filter-box__tip">
+      <span
+        class="filter-box__tip"
+        *ngIf="filterFg.get('search').value.trim() !== ''"
+      >
         <i>press 'Esc' to clear.</i>
       </span>
     </div>
-    <div class="col-2-3 middle">
+    <div class="col-3-4 middle">
       <ul class="filter-box__serie-list">
         <li class="serie">
           <label>
-            <input name="abc" type="radio" />
+            <input
+              type="radio"
+              formControlName="serie"
+              [value]="0"
+              (change)="onSerieChange()"
+            />
             <span>Popular</span>
           </label>
         </li>
-        <li class="serie">
+        <li class="serie" *ngFor="let serie of duraformSeries">
           <label>
-            <input name="abc" type="radio" />
-            <span>Series 1</span>
-          </label>
-        </li>
-        <li class="serie">
-          <label>
-            <input name="abc" type="radio" />
-            <span>Series 2</span>
-          </label>
-        </li>
-        <li class="serie">
-          <label>
-            <input name="abc" type="radio" />
-            <span>Series 3</span>
-          </label>
-        </li>
-        <li class="serie">
-          <label>
-            <input name="abc" type="radio" />
-            <span>Series 4</span>
-          </label>
-        </li>
-        <li class="serie">
-          <label>
-            <input name="abc" type="radio" />
-            <span>Series 5</span>
+            <input
+              type="radio"
+              formControlName="serie"
+              [value]="serie.id"
+              (change)="onSerieChange()"
+            />
+            <span>{{ serie.name }}</span>
           </label>
         </li>
       </ul>
