--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/4-layout/_grid.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/4-layout/_grid.scss
@@ -30,4 +30,12 @@ $col-gap: 1rem;
   .col-2-3 {
     width: calc(2 * ((100% - 2 * #{$col-gap}) / 3) + #{$col-gap});
   }
+
+  .col-1-4 {
+    width: calc((100% - 3 * #{$col-gap}) / 4);
+  }
+
+  .col-3-4 {
+    width: calc(3 * ((100% - 3 * #{$col-gap}) / 4) + 2 * #{$col-gap});
+  }
 }
