--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door/duraform-door.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door/duraform-door.component.html
@@ -15,7 +15,7 @@
   <div class="duraform-door__control-box">
     <div class="duraform-door__control-box__door-name">{{ door.name }}</div>
     <div class="duraform-door__control-box__profile-name">
-      6mm Pencil Round
+      {{ door.fixedEdgeProfileName || door.defaultEdgeProfileName }}
     </div>
     <img
       class="duraform-door__control-box__profile-img"
