--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/color-card/color-card.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/color-card/color-card.component.html
@@ -1,4 +1,4 @@
-<div class="color-card">
+<div class="color-card" (click)="onClick()">
   <div class="color-card__img-box">
     <div class="img-loader" *ngIf="isLoadingImage">
       <i class="fa fa-spinner fa-spin"></i>
