Rename duraform door to duraform design Setup Order service to hold data for duraform order form

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process/duraform-process.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process/duraform-process.component.html
@@ -5,7 +5,11 @@
       Selec Door Design
     </div>
   </li>
-  <li class="step" [class]="{ active: processValue.stepOneValue }">
+  <li
+    class="step"
+    [class]="{ active: order.selectedDesign }"
+    (click)="onStepTwoClick()"
+  >
     <div class="step__number">2</div>
     <div class="step__text">
       Add Components
