--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/2-base/_animation.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/2-base/_animation.scss
@@ -86,3 +86,19 @@
     transform: translateX(0);
   }
 }
+
+@keyframes slideInLeft {
+  0% {
+    opacity: 0;
+    transform: scaleX(0);
+  }
+
+  80% {
+    transform: scaleX(1.1);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scaleX(1);
+  }
+}
