--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-color-selector/duraform-color-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-color-selector/duraform-color-selector.component.html
@@ -5,24 +5,26 @@
         <div class="col-1-4">
           <div class="door__img-box">
             <div class="door-detail">
-              <div class="door-detail__name">{{ door.name }}</div>
+              <div class="door-detail__name">{{ design.name }}</div>
               <div class="door-detail__profile-name">
-                {{ door.fixedEdgeProfileName || door.defaultEdgeProfileName }}
+                {{
+                  design.fixedEdgeProfileName || design.defaultEdgeProfileName
+                }}
               </div>
               <img
                 class="door-detail__profile-img"
                 src="../../../assets/images/Duraform/Profiles/S{{
-                  door.duraformSerieId
-                }}/{{ door.imageUrl.replace('.jpg', '.png') }}"
-                alt="Duraform Profile - {{ door.name }}"
+                  design.duraformSerieId
+                }}/{{ design.imageUrl.replace('.jpg', '.png') }}"
+                alt="Duraform Profile - {{ design.name }}"
               />
             </div>
             <img
               class="door-img"
               src="./../../../assets/images/Duraform/Doors/S{{
-                door.duraformSerieId
-              }}/{{ door.imageUrl }}"
-              alt="Duraform Door - {{ door.name }}"
+                design.duraformSerieId
+              }}/{{ design.imageUrl }}"
+              alt="Duraform Door - {{ design.name }}"
             />
           </div>
         </div>
