--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-one/duraform-order-step-one.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-one/duraform-order-step-one.component.html
@@ -1,13 +1,15 @@
-<app-duraform-door-list
-  *ngIf="duraformDoors.length > 0"
-  [doors]="duraformDoors"
-  [series]="duraformSeries"
-  (selectDoor)="onSelectDoor($event)"
-></app-duraform-door-list>
-<app-duraform-color-selector
-  *ngIf="showColorSelector"
-  [door]="selectedDuraformDoor"
-  (cancel)="onCancelColorSelection()"
-  (colorPick)="onPickColor($event)"
-  (routingPick)="onRoutingPick()"
-></app-duraform-color-selector>
+<div class="duraform-order-step-one">
+  <app-duraform-design-list
+    *ngIf="duraformDesigns.length > 0"
+    [designs]="duraformDesigns"
+    [series]="duraformSeries"
+    (selectDesign)="onSelectDesign($event)"
+  ></app-duraform-design-list>
+  <app-duraform-color-selector
+    *ngIf="showColorSelector"
+    [design]="selectedDuraformDesign"
+    (cancel)="onCancelColorSelection()"
+    (colorPick)="onPickColor($event)"
+    (routingPick)="onRoutingPick()"
+  ></app-duraform-color-selector>
+</div>
