Finished duraform door tab

--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_button.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_button.scss
@@ -47,6 +47,13 @@
     padding: 1rem 1.5rem;
   }
 
+  &--secondary {
+    background-color: $red-primary;
+    border-radius: 0.4rem;
+    color: white;
+    padding: 1rem 1.5rem;
+  }
+
   &--link {
     color: $blue-primary;
     padding: 0;
