--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -11,6 +11,8 @@
 @import "./3-component/primary-top-nav";
 @import "./3-component/primary-left-nav";
 @import "./3-component/dropdown";
+@import "./3-component/tab";
+@import "./3-component/table";
 @import "./3-component/loading-panel";
 @import "./3-component/register-form";
 @import "./3-component/duraform-process";
@@ -20,6 +22,7 @@
 @import "./3-component/color-card";
 @import "./3-component/duraform-order-step-two";
 @import "./3-component/edge-profile-selector";
+@import "./3-component/arch-selector";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
