--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
@@ -7,6 +7,7 @@ app-duraform-order-step-two {
 .duraform-order-step-two {
   display: flex;
   height: 100%;
+  padding-top: 1rem;
 
   .col-left,
   .col-right {
@@ -24,13 +25,31 @@ app-duraform-order-step-two {
   }
 
   .col-right {
-    @include hide-scrollbar;
-
-    background-color: white;
-    border: solid 1px rgba($color: black, $alpha: 0.1);
-    border-radius: 0.5rem;
     flex: 1;
-    overflow-y: auto;
-    padding: 1.5rem 2rem;
+  }
+
+  &__duraform-door-list-item {
+    cursor: pointer;
+
+    &.animated {
+      animation: moveInRight 0.5s ease-out;
+    }
+
+    & > td {
+      border-bottom: none;
+      border-top: none;
+      font-weight: 700;
+      padding: 0.5rem 0.3rem;
+    }
+
+    &:last-child {
+      & > td {
+        border-bottom: solid 1px rgba($color: black, $alpha: 0.3);
+      }
+    }
+
+    &:hover {
+      background-color: rgba($blue-primary, 0.1);
+    }
   }
 }
