--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_edge-profile-selector.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_edge-profile-selector.scss
@@ -5,6 +5,7 @@
   .profile-name {
     border: solid 1px rgba(black, 0.3);
     border-radius: 0.3rem;
+    font-weight: 700;
     padding: 1rem;
     position: relative;
 
@@ -29,26 +30,28 @@
     background-color: white;
     border: solid 1px rgba(black, 0.3);
     box-shadow: 0 0 1rem rgba($color: black, $alpha: 0.4);
+    bottom: -2rem;
     display: none;
     list-style: none;
     left: calc(100% + 4rem);
     margin-left: -$edge-profile-gap;
     margin-right: -$edge-profile-gap;
     position: absolute;
-    top: -1.5rem;
+    padding: 1rem 0;
     transform-origin: left;
     width: 70rem;
+    z-index: 9;
 
     &::before {
       background-color: white;
       border-left: solid 1px rgba(black, 0.3);
       border-bottom: solid 1px rgba(black, 0.3);
+      bottom: 2rem;
       content: "";
       display: inline-block;
       height: 3rem;
       left: -1.6rem;
       position: absolute;
-      top: 2rem;
       transform: rotate(45deg);
       width: 3rem;
     }
