--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
@@ -113,4 +113,59 @@
       }
     }
   }
+
+  &__checkbox {
+    cursor: pointer;
+    position: relative;
+
+    & > input[type="checkbox"] {
+      left: -999.9rem;
+      position: absolute;
+    }
+
+    & > span {
+      &::after {
+        align-items: center;
+        border: solid 1px $text-default;
+        border-radius: 0.3rem;
+        background-color: white;
+        content: "\f00c";
+        color: transparent;
+        display: inline-flex;
+        font-family: "FontAwesome";
+        height: 2rem;
+        justify-content: center;
+        transition: all 0.2s ease;
+        width: 2rem;
+      }
+    }
+
+    & > input[type="checkbox"]:focus ~ span {
+      &::after {
+        border-color: blue;
+        transform: scale(1.3);
+      }
+    }
+
+    & > input[type="checkbox"]:checked ~ span {
+      &::after {
+        color: $red-primary;
+      }
+    }
+  }
+
+  &__order-form-group &__control {
+    border: solid 1px black;
+    background-color: rgba(yellow, 0.2);
+    font-weight: 900;
+    margin: 0 auto;
+    outline-color: blue;
+    padding: 0.5rem;
+    text-align: center;
+    width: 90%;
+
+    &.ng-invalid {
+      background-color: rgba($red-primary, 0.1);
+    }
+  }
 }
