--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
@@ -57,6 +57,51 @@
     />
   </td>
   <td>
+    <input
+      class="form__control"
+      currencyMask
+      appSelectOnFocus
+      formControlName="chairRailHeight"
+      [options]="{
+        align: 'center',
+        allowZero: false,
+        precision: '0',
+        decimal: '',
+        prefix: '',
+        thousands: '',
+        max: 500
+      }"
+    />
+  </td>
+  <td>
+    <select
+      class="form__control text-center"
+      style="width: 95%;"
+      formControlName="chairRailTypeId"
+    >
+      <option *ngFor="let type of pantryDoorChairRailTypes" [value]="type.id">
+        {{ type.name }}
+      </option>
+    </select>
+  </td>
+  <td>
+    <input
+      class="form__control"
+      currencyMask
+      appSelectOnFocus
+      formControlName="extraRailBottom"
+      [options]="{
+        align: 'center',
+        allowZero: false,
+        precision: '0',
+        decimal: '',
+        prefix: '',
+        thousands: '',
+        max: 500
+      }"
+    />
+  </td>
+  <td>
     <label class="form__checkbox">
       <input type="checkbox" formControlName="top" />
       <span></span>
@@ -80,18 +125,6 @@
       <span></span>
     </label>
   </td>
-  <td>
-    <select
-      class="form__control"
-      style="width: 95%;"
-      formControlName="optionId"
-    >
-      <option [value]="null"></option>
-      <option *ngFor="let option of doorOptions" [value]="option.id">
-        {{ option.name }}
-      </option>
-    </select>
-  </td>
   <td colspan="2">
     <input
       type="text"
@@ -108,18 +141,18 @@
   [hidden]="isSelected"
   (click)="onSelect()"
 >
-  <td>{{ door.quantity }}</td>
-  <td>{{ door.height }}</td>
-  <td>{{ door.width }}</td>
-  <td>{{ door.top ? "Y" : "" }}</td>
-  <td>{{ door.bottom ? "Y" : "" }}</td>
-  <td>{{ door.left ? "Y" : "" }}</td>
-  <td>{{ door.right ? "Y" : "" }}</td>
+  <td>{{ pantryDoor.quantity }}</td>
+  <td>{{ pantryDoor.height }}</td>
+  <td>{{ pantryDoor.width }}</td>
+  <td>{{ pantryDoor.chairRailHeight }}</td>
+  <td>{{ pantryDoor.chairRailType.name }}</td>
+  <td>{{ pantryDoor.extraRailBottom }}</td>
+  <td>{{ pantryDoor.top ? "Y" : "" }}</td>
+  <td>{{ pantryDoor.bottom ? "Y" : "" }}</td>
+  <td>{{ pantryDoor.left ? "Y" : "" }}</td>
+  <td>{{ pantryDoor.right ? "Y" : "" }}</td>
   <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ door.duraformDoorOption?.name }}
-  </td>
-  <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ door.note }}
+    {{ pantryDoor.note }}
   </td>
   <td style="width: 5rem;">
     <button
