--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
@@ -28,7 +28,7 @@ app-duraform-order-step-two {
     flex: 1;
   }
 
-  &__duraform-door-list-item {
+  &__cart-list-item {
     cursor: pointer;
 
     &.animated {
