--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_form.scss
@@ -135,7 +135,7 @@
         font-family: "FontAwesome";
         height: 2rem;
         justify-content: center;
-        transition: all 0.2s ease;
+        transition: transform 0.2s ease;
         width: 2rem;
       }
     }
