--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_tab.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_tab.scss
@@ -31,6 +31,7 @@
         background-color: $red-primary;
         border-bottom: solid 1px $red-primary;
         color: white;
+        font-weight: 700;
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
       }
