Finish end panel tab

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
@@ -104,7 +104,7 @@
 </tr>
 <tr
   class="duraform-order-step-two__cart-list-item"
-  [ngClass]="{ animated: !hasSelected }"
+  [ngClass]="{ animated: !hasAnimated }"
   [hidden]="isSelected"
   (click)="onSelect()"
 >
