--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
@@ -47,7 +47,9 @@
             [pantryDoorChairRailTypes]="pantryDoorChairRailTypes"
           ></app-pantry-door-tab>
         </li>
-        <li class="page"></li>
+        <li class="page">
+          <app-end-panel-tab></app-end-panel-tab>
+        </li>
         <li class="page"></li>
       </ul>
     </div>
