--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-add-form/end-panel-add-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-add-form/end-panel-add-form.component.html
@@ -3,7 +3,6 @@
   appOrderForm
   [formGroup]="formGroup"
   (submit)="onSubmit()"
-  [hidden]="!isSelected"
 >
   <td>
     <input
@@ -56,12 +55,27 @@
       }"
     />
   </td>
+  <input
+    class="form__control"
+    currencyMask
+    appSelectOnFocus
+    formControlName="numberOfShields"
+    [options]="{
+      align: 'center',
+      allowZero: false,
+      precision: '0',
+      decimal: '',
+      prefix: '',
+      thousands: '',
+      max: 10
+    }"
+  />
   <td>
     <input
       class="form__control"
       currencyMask
       appSelectOnFocus
-      formControlName="chairRailHeight"
+      formControlName="extraRailBottom"
       [options]="{
         align: 'center',
         allowZero: false,
@@ -74,22 +88,11 @@
     />
   </td>
   <td>
-    <select
-      class="form__control text-center"
-      style="width: 95%;"
-      formControlName="chairRailTypeId"
-    >
-      <option *ngFor="let type of pantryDoorChairRailTypes" [value]="type.id">
-        {{ type.name }}
-      </option>
-    </select>
-  </td>
-  <td>
     <input
       class="form__control"
       currencyMask
       appSelectOnFocus
-      formControlName="extraRailBottom"
+      formControlName="extraRailTop"
       [options]="{
         align: 'center',
         allowZero: false,
@@ -125,7 +128,7 @@
       <span></span>
     </label>
   </td>
-  <td colspan="2">
+  <td>
     <input
       type="text"
       class="form__control"
@@ -134,34 +137,15 @@
       formControlName="note"
     />
   </td>
-</tr>
-<tr
-  class="duraform-order-step-two__cart-list-item"
-  [ngClass]="{ animated: !hasAnimated }"
-  [hidden]="isSelected"
-  (click)="onSelect()"
->
-  <td>{{ pantryDoor.quantity }}</td>
-  <td>{{ pantryDoor.height }}</td>
-  <td>{{ pantryDoor.width }}</td>
-  <td>{{ pantryDoor.chairRailHeight }}</td>
-  <td>{{ pantryDoor.chairRailType.name }}</td>
-  <td>{{ pantryDoor.extraRailBottom }}</td>
-  <td>{{ pantryDoor.top ? "Y" : "" }}</td>
-  <td>{{ pantryDoor.bottom ? "Y" : "" }}</td>
-  <td>{{ pantryDoor.left ? "Y" : "" }}</td>
-  <td>{{ pantryDoor.right ? "Y" : "" }}</td>
-  <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ pantryDoor.note }}
-  </td>
   <td style="width: 5rem;">
     <button
+      [disabled]="formGroup.invalid"
       type="button"
-      class="btn btn--secondary"
+      class="btn btn--primary"
       style="padding: 0.5rem 1rem;"
-      (click)="onRemove()"
+      (click)="onSubmit()"
     >
-      <i class="fa fa-trash"></i>
+      <i class="fa fa-plus-circle"></i>
     </button>
   </td>
 </tr>
