Finish duraform drawer tab without special validation

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
@@ -50,7 +50,11 @@
         <li class="page">
           <app-end-panel-tab></app-end-panel-tab>
         </li>
-        <li class="page"></li>
+        <li class="page">
+          <app-duraform-drawer-tab
+            [duraformDrawerTypes]="duraformDrawerTypes"
+          ></app-duraform-drawer-tab>
+        </li>
       </ul>
     </div>
   </div>
